include/ove/storage.h

/** @cond INTERNAL */
typedef struct {
	uint8_t _opaque;
} ove_mutex_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_sem_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_event_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_condvar_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_thread_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_queue_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_timer_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_eventgroup_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_workqueue_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_work_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_stream_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_watchdog_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_file_storage_t;
typedef struct {
	uint8_t _opaque;
} ove_dir_storage_t;