include/ove/thread.h

/**
 * @brief Thread entry-point function prototype.
 *
 * @param[in] arg  Caller-supplied context pointer passed at creation time.
 */
typedef void (*ove_thread_fn)(void *arg);
/**
 * @brief Thread execution state as reported by the active backend.
 */
typedef enum {
	OVE_THREAD_STATE_RUNNING = 0, /**< @brief Currently executing on the CPU. */
	OVE_THREAD_STATE_READY,	      /**< @brief Ready to run, waiting for the CPU. */
	OVE_THREAD_STATE_BLOCKED,     /**< @brief Blocked on a synchronisation object or delay. */
	OVE_THREAD_STATE_SUSPENDED,   /**< @brief Explicitly suspended via ove_thread_suspend(). */
	OVE_THREAD_STATE_TERMINATED,  /**< @brief Entry function has returned; not yet destroyed. */
	OVE_THREAD_STATE_UNKNOWN,     /**< @brief State could not be determined. */
} ove_thread_state_t;
/**
 * @brief Per-thread runtime statistics snapshot.
 */
struct ove_thread_stats {
	uint64_t runtime_us; /**< @brief Total CPU time consumed by this thread in microseconds. */
	uint32_t cpu_percent_x100; /**< @brief CPU utilisation in hundredths of a percent (e.g. 1250 = 12.50 %). */
};
/**
 * @brief Portable thread-priority levels.
 *
 * Each value maps to a backend-specific numeric priority at initialisation
 * time.  Higher enum values represent higher scheduling priority.
 */
typedef enum {
	OVE_PRIO_IDLE = 0, /**< @brief Lowest priority; runs only when no other thread is ready. */
	OVE_PRIO_LOW = 1,  /**< @brief Low priority background work. */
	OVE_PRIO_BELOW_NORMAL = 2, /**< @brief Below-normal priority. */
	OVE_PRIO_NORMAL = 3,	   /**< @brief Default application priority. */
	OVE_PRIO_ABOVE_NORMAL = 4, /**< @brief Above-normal priority. */
	OVE_PRIO_HIGH = 5,	   /**< @brief High priority; prefer for time-sensitive tasks. */
	OVE_PRIO_REALTIME = 6,	   /**< @brief Real-time priority; use with care. */
	OVE_PRIO_CRITICAL = 7, /**< @brief Highest priority; reserved for critical system tasks. */
} ove_prio_t;
/**
 * @brief Initialise a thread using caller-supplied static storage and stack.
 *
 * Creates a new thread without any heap allocation.  The caller must
 * provide a backend @p storage object and a @p stack buffer of @p stack_size
 * bytes.
 *
 * @param[out] handle      Receives the opaque thread handle on success.
 * @param[in]  storage     Pointer to statically allocated backend storage.
 *                         Must remain valid for the lifetime of the thread.
 * @param[in]  name        Human-readable thread name.  May be truncated.
 * @param[in]  entry       Thread entry-point function.  Must not be NULL.
 * @param[in]  arg         Opaque argument forwarded to @p entry.  May be NULL.
 * @param[in]  priority    Scheduling priority.
 * @param[in]  stack_size  Stack size in bytes.  Must be > 0.
 * @param[in]  stack       Pointer to caller-allocated stack buffer.  Must be
 *                         8-byte aligned (ARM AAPCS).  Use the
 *                         @c OVE_THREAD_STACK_DEFINE_ family of helpers in
 *                         @c include/ove/storage.h.
 * @return OVE_OK on success, or a negative error code on failure.
 *
 * @see ove_thread_deinit, ove_thread_create
 */
int ove_thread_init(ove_thread_t *handle, ove_thread_storage_t *storage, const char *name,
		    ove_thread_fn entry, void *arg, ove_prio_t priority, size_t stack_size,
		    void *stack);
/**
 * @brief Terminate and release a thread created with ove_thread_init().
 *
 * Stops the thread and releases any backend-internal resources.  The
 * static storage supplied at init time is not freed.
 *
 * @param[in] handle  Handle returned by ove_thread_init().
 * @return OVE_OK on success, or a negative error code on failure.
 *
 * @see ove_thread_init
 */
int ove_thread_deinit(ove_thread_t handle);
/**
 * @brief Stop and free a thread created with ove_thread_create().
 *
 * @note Requires @c OVE_HEAP_THREAD.
 *
 * @param[in] handle  Handle returned by ove_thread_create().
 * @return OVE_OK on success, or a negative error code on failure.
 *
 * @see ove_thread_create
 */
int ove_thread_destroy(ove_thread_t handle);
/**
 * @brief Return the handle of the currently executing thread.
 *
 * @return Handle of the calling thread.
 */
ove_thread_t ove_thread_get_self(void);
/**
 * @brief Change the scheduling priority of a thread.
 *
 * @param[in] handle  Thread to modify.
 * @param[in] prio    New priority level.
 */
void ove_thread_set_priority(ove_thread_t handle, ove_prio_t prio);
/**
 * @brief Block the calling thread for at least @p ms milliseconds.
 *
 * @param[in] ms  Minimum sleep duration in milliseconds.  A value of 0
 *                yields the CPU for one scheduler tick.
 */
void ove_thread_sleep_ms(uint32_t ms);
/**
 * @brief Voluntarily yield the CPU to another ready thread of equal or higher priority.
 *
 * Has no effect if no other eligible thread is ready to run.
 */
void ove_thread_yield(void);
/**
 * @brief Suspend a thread, preventing it from being scheduled.
 *
 * The thread remains suspended until ove_thread_resume() is called.
 *
 * @param[in] handle  Thread to suspend.  May be the calling thread itself.
 *
 * @see ove_thread_resume
 */
void ove_thread_suspend(ove_thread_t handle);
/**
 * @brief Resume a previously suspended thread.
 *
 * @param[in] handle  Thread to resume.  Must have been suspended with
 *                    ove_thread_suspend().
 *
 * @see ove_thread_suspend
 */
void ove_thread_resume(ove_thread_t handle);
/**
 * @brief Query the minimum FREE stack a thread has ever had (its high-water usage margin).
 *
 * Despite the name, this returns the stack still UNUSED at the deepest point reached — the
 * remaining headroom — computed from the untouched fill pattern (FreeRTOS
 * uxTaskGetStackHighWaterMark; Zephyr/WASM sentinel scan). For bytes USED, subtract this from the
 * stack size. All backends agree on this free-not-used meaning; only the historical name says
 * "usage".
 *
 * @param[in] handle  Thread to inspect.
 * @return Bytes of stack still free at the historical peak usage, or 0 if the
 *         backend does not support stack profiling.
 */
size_t ove_thread_get_stack_usage(ove_thread_t handle);
/**
 * @brief Query the current execution state of a thread.
 *
 * @param[in] handle  Thread to inspect.
 * @return One of the @c OVE_THREAD_STATE_* values.
 */
ove_thread_state_t ove_thread_get_state(ove_thread_t handle);
/**
 * @brief Retrieve runtime statistics for a thread.
 *
 * Populates @p stats with the total CPU time and utilisation percentage
 * since the scheduler started.
 *
 * @param[in]  handle  Thread to inspect.
 * @param[out] stats   Pointer to a caller-allocated structure that will
 *                     receive the statistics.
 * @return OVE_OK on success, @c OVE_ERR_NOT_SUPPORTED if the backend
 *         does not provide runtime accounting.
 */
int ove_thread_get_runtime_stats(ove_thread_t handle, struct ove_thread_stats *stats);