bindings/rust/ove/src/bindings_stub.rs

// Copyright (C) 2026 Kamil Lulko <kamil.lulko@gmail.com>
//
// SPDX-License-Identifier: GPL-3.0-or-later
//
// This file is part of oveRTOS.

//! Stub FFI bindings for docs.rs builds.
//!
//! This file is used in place of the bindgen-generated `ove_bindings.rs`
//! when building documentation on docs.rs (detected via `DOCS_RS` env var
//! and the `docsrs` cfg flag). It declares all types, constants, and
//! `extern "C"` function signatures used by the Rust wrappers so that
//! `cargo doc` succeeds without a real C toolchain or LVGL headers.

#![allow(non_upper_case_globals, non_camel_case_types, non_snake_case, dead_code)]

use core::ffi::c_void;

// ---------------------------------------------------------------------------
// Primitive aliases
// ---------------------------------------------------------------------------

pub type c_int   = i32;
pub type c_uint  = u32;
pub type c_ulong = u64;

// ---------------------------------------------------------------------------
// Error codes
// ---------------------------------------------------------------------------

pub const OVE_OK:                i32 = 0;
pub const OVE_ERR_NOT_REGISTERED: i32 = -1;
pub const OVE_ERR_INVALID_PARAM: i32 = -2;
pub const OVE_ERR_NO_MEMORY:     i32 = -3;
pub const OVE_ERR_TIMEOUT:       i32 = -4;
pub const OVE_ERR_NOT_SUPPORTED: i32 = -5;
pub const OVE_ERR_QUEUE_FULL:    i32 = -6;

pub const OVE_WAIT_FOREVER: u32 = u32::MAX;

// ---------------------------------------------------------------------------
// Thread state constants
// ---------------------------------------------------------------------------

pub const OVE_THREAD_STATE_RUNNING:    u32 = 0;
pub const OVE_THREAD_STATE_READY:      u32 = 1;
pub const OVE_THREAD_STATE_BLOCKED:    u32 = 2;
pub const OVE_THREAD_STATE_SUSPENDED:  u32 = 3;
pub const OVE_THREAD_STATE_TERMINATED: u32 = 4;
pub const OVE_THREAD_STATE_UNKNOWN:    u32 = 5;

// ---------------------------------------------------------------------------
// Thread priority constants
// ---------------------------------------------------------------------------

pub const OVE_PRIO_IDLE:         u32 = 0;
pub const OVE_PRIO_LOW:          u32 = 1;
pub const OVE_PRIO_BELOW_NORMAL: u32 = 2;
pub const OVE_PRIO_NORMAL:       u32 = 3;
pub const OVE_PRIO_ABOVE_NORMAL: u32 = 4;
pub const OVE_PRIO_HIGH:         u32 = 5;
pub const OVE_PRIO_REALTIME:     u32 = 6;
pub const OVE_PRIO_CRITICAL:     u32 = 7;

// ---------------------------------------------------------------------------
// Filesystem flags
// ---------------------------------------------------------------------------

pub const OVE_FS_O_READ:   u32 = 0x01;
pub const OVE_FS_O_WRITE:  u32 = 0x02;
pub const OVE_FS_O_CREATE: u32 = 0x04;
pub const OVE_FS_O_APPEND: u32 = 0x08;

pub const OVE_FS_SEEK_SET: u32 = 0;
pub const OVE_FS_SEEK_CUR: u32 = 1;
pub const OVE_FS_SEEK_END: u32 = 2;

// ---------------------------------------------------------------------------
// Event group flags
// ---------------------------------------------------------------------------

pub const OVE_EG_WAIT_ALL:      u32 = 0x01;
pub const OVE_EG_CLEAR_ON_EXIT: u32 = 0x02;

// ---------------------------------------------------------------------------
// Opaque handle types
// ---------------------------------------------------------------------------

pub type ove_thread_t     = *mut c_void;
pub type ove_mutex_t      = *mut c_void;
pub type ove_sem_t        = *mut c_void;
pub type ove_event_t      = *mut c_void;
pub type ove_condvar_t    = *mut c_void;
pub type ove_eventgroup_t = *mut c_void;
pub type ove_workqueue_t  = *mut c_void;
pub type ove_work_t       = *mut c_void;
pub type ove_stream_t     = *mut c_void;
pub type ove_watchdog_t   = *mut c_void;
pub type ove_file_t       = *mut c_void;
pub type ove_dir_t        = *mut c_void;
pub type ove_queue_t      = *mut c_void;
pub type ove_timer_t      = *mut c_void;

pub type ove_eventbits_t = u32;

// ---------------------------------------------------------------------------
// Storage types — opaque blobs large enough for any backend
// ---------------------------------------------------------------------------

#[repr(C)]
pub struct ove_mutex_storage_t      { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_sem_storage_t        { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_event_storage_t      { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_condvar_storage_t    { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_thread_storage_t     { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_queue_storage_t      { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_timer_storage_t      { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_eventgroup_storage_t { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_workqueue_storage_t  { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_work_storage_t       { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_stream_storage_t     { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_watchdog_storage_t   { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_file_storage_t       { _opaque: [u8; 256] }
#[repr(C)]
pub struct ove_dir_storage_t        { _opaque: [u8; 256] }

// ---------------------------------------------------------------------------
// Struct types
// ---------------------------------------------------------------------------

#[repr(C)]
pub struct ove_thread_stats {
    pub runtime_us:       u64,
    pub cpu_percent_x100: u32,
}

#[repr(C)]
pub struct ove_thread_desc {
    pub name:       *const core::ffi::c_char,
    pub entry:      Option<unsafe extern "C" fn(*mut c_void)>,
    pub arg:        *mut c_void,
    pub priority:   u32,
    pub stack_size: usize,
    pub stack:      *mut c_void,
}

#[repr(C)]
pub struct ove_dirent {
    pub name:   [core::ffi::c_char; 256],
    pub size:   u32,
    pub is_dir: i32,
}

#[repr(C)]
pub struct ove_audio_fmt {
    pub sample_rate: u32,
    pub channels:    u32,
    pub sample_fmt:  u32,
}

#[repr(C)]
pub struct ove_audio_buf {
    pub data:   *mut c_void,
    pub frames: u32,
    pub fmt:    *const ove_audio_fmt,
}

#[repr(C)]
pub struct ove_audio_node_ops {
    pub configure: Option<unsafe extern "C" fn(*mut c_void, *const ove_audio_fmt, *mut ove_audio_fmt) -> i32>,
    pub start:     Option<unsafe extern "C" fn(*mut c_void) -> i32>,
    pub stop:      Option<unsafe extern "C" fn(*mut c_void) -> i32>,
    pub process:   Option<unsafe extern "C" fn(*mut c_void, *const ove_audio_buf, *mut ove_audio_buf) -> i32>,
    pub destroy:   Option<unsafe extern "C" fn(*mut c_void)>,
}

#[repr(C)]
pub struct ove_audio_node {
    pub name:    *const core::ffi::c_char,
    pub type_:   u32,
    pub ops:     *const ove_audio_node_ops,
    pub ctx:     *mut c_void,
    pub out_fmt: ove_audio_fmt,
}

#[repr(C)]
pub struct ove_audio_edge {
    pub from: u32,
    pub to:   u32,
}

#[repr(C)]
pub struct ove_audio_graph_stats {
    pub cycles:         u32,
    pub underruns:      u32,
    pub overruns:       u32,
    pub node_errors:    u32,
    pub max_process_us: u32,
    pub avg_process_us: u32,
}

#[repr(C)]
pub struct ove_audio_graph {
    pub nodes:            [ove_audio_node; 16],
    pub node_count:       u32,
    pub edges:            [ove_audio_edge; 16],
    pub edge_count:       u32,
    pub exec_order:       [u32; 16],
    pub exec_count:       u32,
    pub buffers:          [ove_audio_buf; 16],
    pub buf_storage:      *mut c_void,
    pub frames_per_period: u32,
    pub state:            u32,
    pub stats:            ove_audio_graph_stats,
}

#[repr(C)]
pub struct ove_audio_device_cfg {
    pub transport:        u32,
    pub fmt:              ove_audio_fmt,
    pub num_buffers:      u32,
    pub thread_priority:  u32,
    pub thread_stack_size: u32,
    pub transport_cfg:    [u8; 16], /* union: i2s/pdm/sdl2 */
}

#[repr(C)]
pub struct ove_shell_cmd {
    pub name:    *const core::ffi::c_char,
    pub help:    *const core::ffi::c_char,
    pub handler: Option<unsafe extern "C" fn(i32, *const *const core::ffi::c_char)>,
}

// ---------------------------------------------------------------------------
// Function pointer types
// ---------------------------------------------------------------------------

pub type ove_thread_fn      = Option<unsafe extern "C" fn(*mut c_void)>;
pub type ove_timer_fn       = Option<unsafe extern "C" fn(ove_timer_t, *mut c_void)>;
pub type ove_work_fn        = Option<unsafe extern "C" fn(ove_work_t)>;
/* ove_audio_process_fn removed — replaced by graph node vtable */
pub type ove_gpio_irq_cb    = Option<unsafe extern "C" fn(u32, u32, *mut c_void)>;
pub type ove_shell_cmd_fn   = Option<unsafe extern "C" fn(i32, *const *const core::ffi::c_char)>;

// ---------------------------------------------------------------------------
// extern "C" — oveRTOS API
// ---------------------------------------------------------------------------

unsafe extern "C" {

    // --- app / scheduler ---
    pub fn ove_run();
    pub fn ove_app_run() -> i32;

    // --- thread ---
    pub fn ove_thread_init(
        handle:  *mut ove_thread_t,
        storage: *mut ove_thread_storage_t,
        desc:    *const ove_thread_desc,
    ) -> i32;
    pub fn ove_thread_deinit(handle: ove_thread_t) -> i32;
    pub fn ove_thread_create_(
        handle: *mut ove_thread_t,
        desc:   *const ove_thread_desc,
    ) -> i32;
    pub fn ove_thread_destroy(handle: ove_thread_t) -> i32;
    pub fn ove_thread_get_self() -> ove_thread_t;
    pub fn ove_thread_set_priority(handle: ove_thread_t, prio: u32);
    pub fn ove_thread_sleep_ms(ms: u32);
    pub fn ove_thread_yield();
    pub fn ove_thread_suspend(handle: ove_thread_t);
    pub fn ove_thread_resume(handle: ove_thread_t);
    pub fn ove_thread_get_stack_usage(handle: ove_thread_t) -> usize;
    pub fn ove_thread_get_state(handle: ove_thread_t) -> u32;
    pub fn ove_thread_get_runtime_stats(
        handle: ove_thread_t,
        stats:  *mut ove_thread_stats,
    ) -> i32;

    // --- mutex ---
    pub fn ove_mutex_init(mtx: *mut ove_mutex_t, storage: *mut ove_mutex_storage_t) -> i32;
    pub fn ove_mutex_deinit(mtx: ove_mutex_t);
    pub fn ove_mutex_create(mtx: *mut ove_mutex_t) -> i32;
    pub fn ove_mutex_destroy(mtx: ove_mutex_t);
    pub fn ove_mutex_lock(mtx: ove_mutex_t, timeout_ms: u32) -> i32;
    pub fn ove_mutex_unlock(mtx: ove_mutex_t);

    // --- recursive mutex ---
    pub fn ove_recursive_mutex_init(
        mtx:     *mut ove_mutex_t,
        storage: *mut ove_mutex_storage_t,
    ) -> i32;
    pub fn ove_recursive_mutex_create(mtx: *mut ove_mutex_t) -> i32;
    pub fn ove_recursive_mutex_destroy(mtx: ove_mutex_t);
    pub fn ove_recursive_mutex_lock(mtx: ove_mutex_t, timeout_ms: u32) -> i32;
    pub fn ove_recursive_mutex_unlock(mtx: ove_mutex_t);

    // --- semaphore ---
    pub fn ove_sem_init(
        sem:     *mut ove_sem_t,
        storage: *mut ove_sem_storage_t,
        initial: u32,
        max:     u32,
    ) -> i32;
    pub fn ove_sem_deinit(sem: ove_sem_t);
    pub fn ove_sem_create(sem: *mut ove_sem_t, initial: u32, max: u32) -> i32;
    pub fn ove_sem_destroy(sem: ove_sem_t);
    pub fn ove_sem_take(sem: ove_sem_t, timeout_ms: u32) -> i32;
    pub fn ove_sem_give(sem: ove_sem_t);

    // --- event ---
    pub fn ove_event_init(
        evt:     *mut ove_event_t,
        storage: *mut ove_event_storage_t,
    ) -> i32;
    pub fn ove_event_deinit(evt: ove_event_t);
    pub fn ove_event_create(evt: *mut ove_event_t) -> i32;
    pub fn ove_event_destroy(evt: ove_event_t);
    pub fn ove_event_wait(evt: ove_event_t, timeout_ms: u32) -> i32;
    pub fn ove_event_signal(evt: ove_event_t);
    pub fn ove_event_signal_from_isr(evt: ove_event_t);
